--- a/CASH.html
+++ b/CASH.html
@@ -85,6 +85,10 @@ body{
     box-sizing: border-box;
 }
 
+#clear:hover,.button:hover{
+  background-color: gray;
+}
+
 .container1{
     position:fixed;
     right:10px;
